@@ -1,5 +1,7 @@
 plyr 1.2 (2010-XX-XX) ---------------------------------------------------
 
+* llply gains .parallel argument that when set to true will apply parallel functions in parallel using foreach package
+
 plyr 1.1 (2010-07-19) ---------------------------------------------------
 
 * *dply deals more gracefully with the case when all results are NULL (fixes #10)
